--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
                             <v-card class="elevation-4 rounded-lg">
                                 <v-card-title class="text-h5 text-center text-primary pa-6">
                                     <v-icon size="40" class="mb-2" color="primary">mdi-lightning-bolt</v-icon>
-                                    <div class="font-weight-bold">Powerbill Billing System</div>
+                                    <div class="font-weight-bold">Power Billing System</div>
                                 </v-card-title>
                                 
                                 <v-card-text class="pa-6">
